--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,18 +8,18 @@ version = "0.1.0"
 
 [tool.poetry.dependencies]
 bidict = ">=0.23.1"
-click = ">=8.1.7"
+click = ">=8.2.1"
 click-params = ">=0.5.0"
 click_log = ">=0.4.0"
-cloup = ">=3.0.5"
+cloup = ">=3.0.7"
 python = ">=3.11,<4.0"
 rnapy = {git = "https://github.com/Edgeworth/memerna.git", rev = "main"}
-torch = ">=2.3.0"
+torch = ">=2.7.1"
 torch-tb-profiler = ">=0.4.3"
 
-[tool.poetry.dev-dependencies]
-mypy = ">=1.10.0"
-poetry-plugin-up = ">=0.7.1"
+[tool.poetry.group.dev.dependencies]
+mypy = ">=1.16.0"
+poetry-plugin-up = ">=0.9.0"
 
 [tool.mypy]
 show_column_numbers = true
@@ -46,7 +46,7 @@ warn_unused_ignores = true
 show_error_codes = true
 
 # Set python version.
-python_version = '3.12'
+python_version = '3.13'
 
 # No type hints for torchvision.
 [[tool.mypy.overrides]]
@@ -76,8 +76,6 @@ skip-magic-trailing-comma = true
 [tool.ruff.lint]
 ignore = [
   "A003", # allow attribute shadowing builtins 'eval', 'sorted' etc
-  "ANN101", # no need to annotate self
-  "ANN102", # no need to annotate cls self
   "ANN401", # allow Any type annotation
   "BLE001", # allow except Exception
   "C901", # ignore too complex code
@@ -117,7 +115,7 @@ ignore = [
 ]
 select = ["ALL"]
 
-[tool.ruff.per-file-ignores]
+[tool.ruff.lint.per-file-ignores]
 "**/tests/**/*.py" = [
   "SLF001", # allow private member access
 ]
