--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -42,11 +42,9 @@ repos:
             click-params,
             click_log,
             cloup,
-            pandas,
-            python-dotenv,
+            matplotlib,
+            rnapy,
             seaborn,
             statsmodels,
-            torch,
-            torchtext,
-            torchvision,
+            viennarna,
           ]
