--- a/pyproject.toml
+++ b/pyproject.toml
@@ -27,6 +27,7 @@ scipy = "1.15.3" # https://github.com/statsmodels/statsmodels/issues/9584
 seaborn = ">=0.13.2" 
 statsmodels = ">=0.14.4" 
 viennarna = ">=2.7.0" 
+pyarrow = "^20.0.0"
 
 [tool.poetry.group.dev.dependencies]
 mypy = ">=1.16.0"
