--- a/pyproject.toml
+++ b/pyproject.toml
@@ -15,22 +15,23 @@ requires = ["poetry-core>=1.0.0"]
 packages = [{include = "memernaex"}]
 
 [tool.poetry.dependencies]
-bidict = ">=0.23.1" 
-click = ">=8.2.1" 
-click-params = ">=0.5.0" 
-click_log = ">=0.4.0" 
-cloup = ">=3.0.7" 
-matplotlib = ">=3.10.3" 
-polars = ">=1.31.0" 
-rnapy = {git = "https://github.com/Edgeworth/memerna.git", rev = "main"} 
-scipy = "1.15.3" # https://github.com/statsmodels/statsmodels/issues/9584
-seaborn = ">=0.13.2" 
-statsmodels = ">=0.14.4" 
-viennarna = ">=2.7.0" 
+bidict = ">=0.23.1"
+click = ">=8.2.1"
+click-params = ">=0.5.0"
+click_log = ">=0.4.0"
+cloup = ">=3.0.7"
+matplotlib = ">=3.10.3"
+polars = ">=1.31.0"
 pyarrow = "^20.0.0"
+rnapy = {git = "https://github.com/Edgeworth/memerna.git", rev = "main"}
+scipy = ">=1.16.0"
+seaborn = ">=0.13.2"
+statsmodels = ">=0.14.5"
+viennarna = ">=2.7.0"
+lmfit = "^1.3.3"
 
 [tool.poetry.group.dev.dependencies]
-mypy = ">=1.16.0"
+mypy = ">=1.16.1"
 poetry-plugin-up = ">=0.9.0"
 
 [tool.mypy]
