--- a/pyproject.toml
+++ b/pyproject.toml
@@ -20,6 +20,7 @@ click = ">=8.2.1"
 click-params = ">=0.5.0"
 click_log = ">=0.4.0"
 cloup = ">=3.0.7"
+lmfit = "^1.3.3"
 matplotlib = ">=3.10.3"
 polars = ">=1.31.0"
 pyarrow = "^20.0.0"
@@ -28,7 +29,6 @@ scipy = ">=1.16.0"
 seaborn = ">=0.13.2"
 statsmodels = ">=0.14.5"
 viennarna = ">=2.7.0"
-lmfit = "^1.3.3"
 
 [tool.poetry.group.dev.dependencies]
 mypy = ">=1.16.1"
@@ -76,6 +76,7 @@ module = [
   "statsmodels.*",
   "click_params.*",
   "scipy.*",
+  "lmfit.*",
 ]
 
 [tool.ruff]
